v0.5.0, 2015-??-?? -- ???
 * requires boto 2.35.0 or newer (#980)
 * jobs:
   * mr() no longer takes positional arguments (#814)
   * removed jar() (use mrjob.step.JarStep)
   * removed testing methods parse_counters() and parse_output()
   * mrjob.step:
      * JarStep only takes "args" and "main_class" keyword args
      * removed MRJobStep (use MRStep)
 * runners:
   * All runners:
     * removed IS_SUCCESSFUL cleanup option (use ALL)
     * *SCRATCH cleanup options renamed to *TMP (#318)
     * base_tmp_dir option has been renamed to local_tmp_dir (#318)
   * EMR:
     * default AWS region is us-west-2 (#1025)
     * s3_scratch_uri option is now s3_tmp_dir (#318)
     * aws_region is no longer inferred from s3_tmp_dir
     * mrjob works correctly across AWS regions:
       * connect to each S3 bucket on appropriate endpoint (#1028)
       * create/select temp bucket in same region as EMR jobs (#687)
     * added iam_endpoint option (#1067)
     * pool_wait_minutes can now be loaded from mrjob.conf (#1070)
     * SSH tunnel now works on 3.x AMIs (#1013)
       * renamed ssh_tunnel_to_job_tracker option to ssh_tunnel
     * removed s3_conn args from methods in EMRJobRunner and S3Filesystem
     * removed iam_job_flow_role option (use iam_instance_profile)
     * removed support for _$folder$ keys, which EMR no longer creates
   * Hadoop
     * hdfs_scratch_dir option is now hadoop_tmp_dir (#318)
 * removed mrjob.compat.get_jobconf_value() (use jobconf_from_env())
 * mrjob.util:
   * random_identifier() moved here from mrjob.aws
   * renamed buffer_iterator_to_line_iterator() to to_lines()
     * to_lines() no longer appends a newline to data (#819)
   * removed extract_dir_for_tar()
   * gunzip_stream() now yields chunks, not lines
   * removed hash_object()

v0.4.5, 2015-07-28 -- DescribeJobFlows begone
 * boto>=2.6.0 is required (used to be 2.2.0)
 * runners:
   * EMR:
     * moved off deprecated DescribeJobFlows API (#876)