@@ -829,14 +829,19 @@ class PartitionerTestCase(TestCase):
                          'org.apache.hadoop.mapreduce.Partitioner')
 
 
-class IsMapperOrReducerTestCase(TestCase):
+class IsTaskTestCase(TestCase):
 
-    def test_is_mapper_or_reducer(self):
-        self.assertEqual(MRJob().is_mapper_or_reducer(), False)
-        self.assertEqual(MRJob(['--mapper']).is_mapper_or_reducer(), True)
-        self.assertEqual(MRJob(['--reducer']).is_mapper_or_reducer(), True)
-        self.assertEqual(MRJob(['--combiner']).is_mapper_or_reducer(), True)
-        self.assertEqual(MRJob(['--steps']).is_mapper_or_reducer(), False)
+    def test_is_task(self):
+        self.assertEqual(MRJob().is_task(), False)
+        self.assertEqual(MRJob(['--mapper']).is_task(), True)
+        self.assertEqual(MRJob(['--reducer']).is_task(), True)
+        self.assertEqual(MRJob(['--combiner']).is_task(), True)
+        self.assertEqual(MRJob(['--steps']).is_task(), False)
+
+    def test_deprecated_alias(self):
+        with logger_disabled('mrjob.launch'):
+            self.assertEqual(MRJob().is_mapper_or_reducer(), False)
+            self.assertEqual(MRJob(['--mapper']).is_mapper_or_reducer(), True)
 
 
 class StepNumTestCase(TestCase):
